--- a/server/.htaccess
+++ b/server/.htaccess
@@ -1,4 +1,10 @@
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ public/index.php/$1 [L]
+#RewriteEngine On
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteCond %{REQUEST_FILENAME} !-d
+#RewriteRule ^(.*)$ public/index.php/$1 [L]
+
+#GeoIPEnable On
+
+#<IfModule mod_headers.c>
+#Header set Access-Control-Allow-Origin "*"
+#</IfModule>
