--- a/server/composer.json
+++ b/server/composer.json
@@ -7,6 +7,10 @@
     },
     "require": {
         "zircote/swagger-php": "^4.7",
-        "swagger-api/swagger-ui": "^4.19"
+        "swagger-api/swagger-ui": "^4.19",
+        "guzzlehttp/guzzle": "^7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.6"
     }
 }
